added support for LED strips via FastLED

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif8266
 board = d1_mini_pro
 framework = arduino
-lib_deps = majicdesigns/MD_MAX72XX@^3.5.1
+lib_deps = 
+	majicdesigns/MD_MAX72XX@^3.5.1
+	fastled/FastLED@^3.9.2
